--- a/frontend/templates/user_fill.html
+++ b/frontend/templates/user_fill.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>user_fill</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styleguide.css') }}">
-    <meta charset="utf-8">
-  </head>
-  <body style="background-color:WhiteSmoke">
-    <br></br>
-    <br></br>
-    <div class="header_text">
-      <h1> Okay, we'll have you fill in the blanks! </h1>
+{% extends "layout.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<br><br>
+<div class="header_text">
+    <h1> Okay, we'll have you fill in the blanks! </h1>
+    <h2> Fill in the blanks below. Press submit when finished.</h2>
+    <h3> MadLib selected: {{ title }}</h3>
+    <form action="user_fill.html" method="post">
+        {% for blank, name in blanks %}
+        {{ blank }}:
+        <input type="text" name="{{ name }}"><br>
+        <br>
+        {% endfor %}
+        <input type="submit" name="{{ title }}" value="Submit">
+    </form>
 
-    </div>
-  </body>
-</html>
+</div>
+{% endblock %}
