--- a/frontend/templates/select_user_madlib.html
+++ b/frontend/templates/select_user_madlib.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Select MadLib{% endblock %}
 {% block content %}
 <br><br>
 <div class="header_text">
